# world-generator

./: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/space/: CMakeLists.txt
src/space/core/window/: window.cpp  window.h
src/space/system/monitor/: monitor.cpp  monitor.h
